# ChangeLog for dev-libs/libxml2
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxml2/ChangeLog,v 1.288 2010/05/11 21:26:13 ranger Exp $

  11 May 2010; Brent Baude <ranger@gentoo.org> libxml2-2.7.7.ebuild:
  stable ppc64, bug 317819

  11 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> libxml2-2.7.7.ebuild:
  x86 stable wrt bug #317819

  10 May 2010; nixnut <nixnut@gentoo.org> libxml2-2.7.7.ebuild:
  ppc stable #317819

  04 May 2010; <angelos@gentoo.org> libxml2-2.7.7.ebuild:
  amd64 stable, thanks to Roeland Douma (bug #317819)

  24 Apr 2010; Raúl Porcel <armin76@gentoo.org> libxml2-2.7.6.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #309949

  11 Apr 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> libxml2-2.7.6.ebuild:
  x86 stable wrt bug #309949

  06 Apr 2010; Gilles Dartiguelongue <eva@gentoo.org>
  -libxml2-2.7.4-r1.ebuild, -files/libxml2-2.7.4-parser-grow.patch,
  libxml2-2.7.7.ebuild:
  Enable multiple python ABI support, bug #312193. Clean up old revision.

  24 Mar 2010; Brent Baude <ranger@gentoo.org> libxml2-2.7.6.ebuild:
  stable ppc, bug 309949

  21 Mar 2010; Brent Baude <ranger@gentoo.org> libxml2-2.7.6.ebuild:
  stable ppc64, bug 309949

*libxml2-2.7.7 (18 Mar 2010)

  18 Mar 2010; Samuli Suominen <ssuominen@gentoo.org> +libxml2-2.7.7.ebuild:
  Version bump wrt #309723.

  18 Mar 2010; Markos Chandras <hwoarang@gentoo.org> libxml2-2.7.6.ebuild:
  Stable on amd64 wrt bug #309949

  08 Mar 2010; Zac Medico <zmedico@gentoo.org> libxml2-2.7.3-r2.ebuild,
  libxml2-2.7.4-r1.ebuild, libxml2-2.7.6.ebuild:
  Specify <python-3 since only python-2.x works.

*libxml2-2.7.6 (23 Dec 2009)

  23 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +libxml2-2.7.6.ebuild:
  Version bump, fixes Relax-NG validation problems.

  08 Dec 2009; Gilles Dartiguelongue <eva@gentoo.org> -libxml2-2.7.4.ebuild,
  libxml2-2.7.4-r1.ebuild: