@@ -7,6 +7,6 @@ DIST xsts-2002-01-16.tar.gz 6894439 RMD160 e8905fe1451a1c367b0104af24edca73bad1d
 DIST xsts-2004-01-14.tar.gz 2761085 RMD160 faff2d7826e47ae9968564bc83dab1b54c5e4bf6 SHA1 5896c2aa2cda464246306c5cf0577ed506eefaab SHA256 09bdf9f81f381ebf9bc158a9472e498e896f7a02eb7461146e9abe1b9493ca17
 EBUILD libxml2-2.7.3-r2.ebuild 4457 RMD160 a88ba8bf4844dee50a72ea5f1a0d6c6a5b55f8a4 SHA1 9e55595b368a863bd7cf4b96f272f1ed0da3faf7 SHA256 f7cf9157bfd0afe55edff5365980939edf5fa07c5a9fb72cff7b196f89b809ed
 EBUILD libxml2-2.7.6.ebuild 3932 RMD160 c87a141c90429a28eea755271fe86e23f688fcac SHA1 91b0c0924901b411c91ed64ecded962ffc892213 SHA256 686a385c960c4b6782d932d91ef81cb6ee73c69661700243058e1a2af3853ae4
-EBUILD libxml2-2.7.7.ebuild 4688 RMD160 682b0926c35f218842a0af8a0fe8dab5d6f3ec86 SHA1 20d6aecb286175d999c255b3df5bb65d34a9e444 SHA256 2b7e60e9eca4f1c13512645df903294f0eba61ebc4acef145bd21e46866232b1
-MISC ChangeLog 38624 RMD160 a74101229534bf0ef4869bff4b812260753c96fd SHA1 89fe3c8b2a0eab357d7a3a5714a034c1631004bc SHA256 a62ca05632e189a5d363130fb83a8ac3566cc58cfdc4f30cd1ba5a7b97e1d432
+EBUILD libxml2-2.7.7.ebuild 4979 RMD160 7f4479c98fa951d8640fca14b4e478db4bc352e9 SHA1 7f7f79ae8735db848c8d834d7f3ba42596a7c2bc SHA256 bd279bbaaf1bf2f75ceba7db1151faf0394b6deb273d1f0f416e05934d4bc6d5
+MISC ChangeLog 38932 RMD160 56bfffc9e31d39d710bc50b060192eaad743e70d SHA1 54a2e3c0dd29f36d6f016cbbe2fb6ddf5990ebf4 SHA256 dddce29f472a43483cb83b330ce1e34d595f9c1ede40bf5cc961e3a87c0a6607
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
