@@ -1,12 +1,18 @@
 # ChangeLog for dev-libs/libxml2
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxml2/ChangeLog,v 1.288 2010/05/11 21:26:13 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxml2/ChangeLog,v 1.289 2010/05/14 03:59:59 robbat2 Exp $
 
   11 May 2010; Brent Baude <ranger@gentoo.org> libxml2-2.7.7.ebuild:
   stable ppc64, bug 317819
 
   11 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> libxml2-2.7.7.ebuild:
   x86 stable wrt bug #317819
+
+  14 May 2010; Robin H. Johnson <robbat2@gentoo.org> libxml2-2.7.7.ebuild:
+  Fix so that the catalyst autobuilds can continue safely. If the Python
+  binary is not present in $ROOT, python_execute_function returns
+  successfully but silently, WITHOUT running the command (with disasterous
+  side-effects).
 
   10 May 2010; nixnut <nixnut@gentoo.org> libxml2-2.7.7.ebuild:
   ppc stable #317819
